@@ -139,10 +139,6 @@ class SkinTemplate extends Skin {
 		$fname = 'SkinTemplate::outputPage';
 		wfProfileIn( $fname );
 
-		// Hook that allows last minute changes to the output page, e.g.
-		// adding of CSS or Javascript by extensions.
-		wfRunHooks( 'BeforePageDisplay', array( &$out ) );
-
 		$oldid = $wgRequest->getVal( 'oldid' );
 		$diff = $wgRequest->getVal( 'diff' );
 
